--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,71 @@
-streamlit
-openai
-python-dotenv
+agno==1.7.5
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+bcrypt==4.3.0
+blinker==1.9.0
+cachetools==6.1.0
+captcha==0.7.1
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cryptography==45.0.5
+distro==1.9.0
+docstring_parser==0.16
+extra-streamlit-components==0.1.80
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.47.1
+numpy==2.3.1
+openai==1.97.0
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+protobuf==6.31.1
+pyarrow==21.0.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.2
+PyJWT==2.10.1
+pyperclip==1.9.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.4
+rich==14.0.0
+rpds-py==0.26.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.47.0
+streamlit-authenticator==0.4.2
+tenacity==9.1.2
+toml==0.10.2
+tomli==2.2.1
+tornado==6.5.1
+tqdm==4.67.1
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
